fix(Tabs): vertical tabs shouldn't wrap

--- a/src/tabs/tabs.scss
+++ b/src/tabs/tabs.scss
@@ -137,6 +137,7 @@
     li,
     .iui-tab {
       width: 100%;
+      whites-space: nowrap;
     }
 
     ~ .iui-tabs-content {
